--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Calculadora</title>
 </head>
 
@@ -47,7 +47,7 @@
             </tr>
         </table>
     </div>
-    <script src="/js/calculadora.js"></script>
+    <script src="/calculadora.js"></script>
 </body>
 
 </html>
